--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,7 +36,7 @@
     <string name="ts_salary">Lương</string>
     <string name="ts_income_other">Khoảng thu khác</string>
     <string name="ts_interest">Tiền lãi</string>
-    <string name="ts_save_money">Gửi tiền</string>
+    <string name="ts_deposit">Gửi tiền</string>
     <string name="ts_friend_n_love">Bạn bè &amp; người yêu</string>
     <string name="ts_insurance">Bảo hiểm</string>
     <string name="ts_fee">Chi phí</string>
