minh final of day

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="ts_awarded">Được tặng</string>
     <string name="ts_sale">Bán đồ</string>
     <string name="ts_salary">Lương</string>
-    <string name="ts_income_other">Khoảng thu khác</string>
+    <string name="ts_income_other">Khoản thu khác</string>
     <string name="ts_interest">Tiền lãi</string>
     <string name="ts_deposit">Gửi tiền</string>
     <string name="ts_friend_n_love">Bạn bè &amp; người yêu</string>
