--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">BK Wallet</string>
     <string name="nav_logout">Log out</string>
 
+    <string name="action_scan">Scanner</string>
 
     <!--those strings are for authentication layout-->
     <string name="server_client_id">829138065824-dp8j226v2s381ghh85qkbdrru2hnkc2k.apps.googleusercontent.com</string>
@@ -13,7 +14,7 @@
     <string name="loginFacebook">Log in with FaceBook</string>
     <string name="loginGoogle">Log in with Google</string>
     <string name="Or">Others Ways</string>
-    <string name="forgetPassword">Forget Password?</string>
+    <string name="retrievePassword">Retrieve Password?</string>
     <string name="signUp">Sign Up</string>
     <string name="error_Login">Log In fail. Something is wrong !!!</string>
     <string name="error_Toast">Missing </string>
